--- a/Part 3/phonebook_backend/fly.toml
+++ b/Part 3/phonebook_backend/fly.toml
@@ -1,16 +1,16 @@
-# fly.toml app configuration file generated for phonebook-backend-fso on 2025-12-23T22:32:27+02:00
+# fly.toml app configuration file generated for phonebook-fly-frosty-frog-6317 on 2026-01-07T16:47:46+02:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'phonebook-backend-fso'
+app = 'phonebook-fly-frosty-frog-6317'
 primary_region = 'arn'
 
 [build]
 
 [env]
-  PORT = "3001"
-  
+  PORT = '3001'
+
 [http_service]
   internal_port = 3001
   force_https = true
@@ -21,5 +21,6 @@ primary_region = 'arn'
 
 [[vm]]
   memory = '1gb'
+  cpu_kind = 'shared'
   cpus = 1
   memory_mb = 1024
